--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div id="game"></div>
+    <div id="loby">
+        <h1>Wish Invader</h1>
+        <p>Pour vous deplacer utilisez les fleches de droites et de gauches</p>
+        <p>Pour tirer utilisez espace</p>
+        <button id="startGame" onclick="countDown()">JOUER</button>
+    </div>
+    <section id="gameSection"><div id="game"></div></section>
+    
+    <div id ="score"></div>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
