--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <div id="loby">
         <h1>Wish Invader</h1>
-        <p>Pour vous deplacer utilisez les fleches de droites et de gauches</p>
+        <div>
+            <button id="startGame" >JOUER</button>
+        </div>
+        
+        <p>Pour vous deplacer utilisez  ← et →</p>
         <p>Pour tirer utilisez espace</p>
-        <button id="startGame" onclick="countDown()">JOUER</button>
     </div>
     <section id="gameSection"><div id="game"></div></section>
     
