--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="loby">
         <h1>Wish Invader</h1>
         <div>
-            <button id="startGame" >JOUER</button>
+            <button id="startGame" onclick='gameInit()' >JOUER</button>
         </div>
         
         <p>Pour vous deplacer utilisez  ← et →</p>
